Purge legacy document schema
